src/snapshots/cargo_semver_checks__query__tests__trait_method_now_doc_hidden.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/trait_method_now_doc_hidden/": [
        {
            "name": String("assoc_function"),
            "path": List([
                String("trait_method_now_doc_hidden"),
                String("PublicTrait"),
            ]),
            "span_begin_line": Uint64(14),
            "span_filename": String("src/lib.rs"),
        },
        {
            "name": String("method"),
            "path": List([
                String("trait_method_now_doc_hidden"),
                String("PublicTrait"),
            ]),
            "span_begin_line": Uint64(16),
            "span_filename": String("src/lib.rs"),
        },
    ],
    "./test_crates/trait_now_doc_hidden/": [
        {
            "name": String("my_trait_fn"),
            "path": List([
                String("trait_now_doc_hidden"),
                String("PublicTraitHiddenVariant"),
            ]),
            "span_begin_line": Uint64(54),
            "span_filename": String("src/lib.rs"),
        },
    ],
}
