src/snapshots/cargo_semver_checks__query__tests__trait_missing.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/switch_to_reexport_as_underscore/": [
        {
            "name": String("Trait"),
            "path": List([
                String("switch_to_reexport_as_underscore"),
                String("Trait"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_associated_type_removed/": [
        {
            "name": String("RemovedTrait"),
            "path": List([
                String("trait_associated_type_removed"),
                String("RemovedTrait"),
            ]),
            "span_begin_line": Uint64(22),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_method_missing/": [
        {
            "name": String("RemovedTraitWithMethod"),
            "path": List([
                String("trait_method_missing"),
                String("RemovedTraitWithMethod"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_method_unsafe_added/": [
        {
            "name": String("TraitBecomesPrivate"),
            "path": List([
                String("trait_method_unsafe_added"),
                String("TraitBecomesPrivate"),
            ]),
            "span_begin_line": Uint64(17),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_method_unsafe_removed/": [
        {
            "name": String("TraitBecomesPrivate"),
            "path": List([
                String("trait_method_unsafe_removed"),
                String("TraitBecomesPrivate"),
            ]),
            "span_begin_line": Uint64(19),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_missing/": [
        {
            "name": String("RemovedTrait"),
            "path": List([
                String("trait_missing"),
                String("RemovedTrait"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovedUnsafeTrait"),
            "path": List([
                String("trait_missing"),
                String("RemovedUnsafeTrait"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PubUseRemovedTrait"),
            "path": List([
                String("trait_missing"),
                String("my_pub_mod"),
                String("PubUseRemovedTrait"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PubUseRemovedTrait"),
            "path": List([
                String("trait_missing"),
                String("PubUseRemovedTrait"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_missing_with_major_bump/": [
        {
            "name": String("RemovedTrait"),
            "path": List([
                String("trait_missing_with_major_bump"),
                String("RemovedTrait"),
            ]),
            "span_begin_line": Uint64(1),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovedUnsafeTrait"),
            "path": List([
                String("trait_missing_with_major_bump"),
                String("RemovedUnsafeTrait"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PubUseRemovedTrait"),
            "path": List([
                String("trait_missing_with_major_bump"),
                String("my_pub_mod"),
                String("PubUseRemovedTrait"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("PubUseRemovedTrait"),
            "path": List([
                String("trait_missing_with_major_bump"),
                String("PubUseRemovedTrait"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_removed_associated_constant/": [
        {
            "name": String("RemovedTrait"),
            "path": List([
                String("trait_removed_associated_constant"),
                String("RemovedTrait"),
            ]),
            "span_begin_line": Uint64(21),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_unsafe_added/": [
        {
            "name": String("TraitBecomesPrivateAndUnsafe"),
            "path": List([
                String("trait_unsafe_added"),
                String("TraitBecomesPrivateAndUnsafe"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_unsafe_removed/": [
        {
            "name": String("TraitBecomesPrivateAndSafe"),
            "path": List([
                String("trait_unsafe_removed"),
                String("TraitBecomesPrivateAndSafe"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
