src/snapshots/cargo_semver_checks__query__tests__trait_must_use_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/trait_must_use_added/": [
        {
            "name": String("TraitToMustUseTrait"),
            "new_attr": String("#[must_use]"),
            "path": List([
                String("trait_must_use_added"),
                String("TraitToMustUseTrait"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
        {
            "name": String("TraitToMustUseMessageTrait"),
            "new_attr": String("#[must_use = \"Foo\"]"),
            "path": List([
                String("trait_must_use_added"),
                String("TraitToMustUseMessageTrait"),
            ]),
            "span_begin_line": Uint64(8),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
