src/snapshots/cargo_semver_checks__query__tests__trait_now_doc_hidden.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/trait_now_doc_hidden/": [
        {
            "path": List([
                String("trait_now_doc_hidden"),
                String("MyPublicMod"),
                String("MyTrait"),
            ]),
            "span_begin_line": Uint64(13),
            "span_filename": String("src/lib.rs"),
            "trait_name": String("MyTrait"),
        },
        {
            "path": List([
                String("trait_now_doc_hidden"),
                String("MyNestedPublicMod"),
                String("PublicInnerMod"),
                String("MyTrait"),
            ]),
            "span_begin_line": Uint64(38),
            "span_filename": String("src/lib.rs"),
            "trait_name": String("MyTrait"),
        },
        {
            "path": List([
                String("trait_now_doc_hidden"),
                String("Example"),
            ]),
            "span_begin_line": Uint64(47),
            "span_filename": String("src/lib.rs"),
            "trait_name": String("Example"),
        },
    ],
}
