src/snapshots/cargo_semver_checks__query__tests__trait_removed_associated_type.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/trait_associated_type_removed/": [
        {
            "associated_type": String("Apple"),
            "path": List([
                String("trait_associated_type_removed"),
                String("RemovedTypeFromTrait"),
            ]),
            "span_begin_line": Uint64(3),
            "span_filename": String("src/lib.rs"),
            "trait_name": String("RemovedTypeFromTrait"),
            "visibility_limit": String("public"),
        },
        {
            "associated_type": String("MyType"),
            "path": List([
                String("trait_associated_type_removed"),
                String("RemovedTypeDefaultFromTrait"),
            ]),
            "span_begin_line": Uint64(11),
            "span_filename": String("src/lib.rs"),
            "trait_name": String("RemovedTypeDefaultFromTrait"),
            "visibility_limit": String("public"),
        },
    ],
}
