src/snapshots/cargo_semver_checks__query__tests__trait_removed_supertrait.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/trait_removed_supertrait/": [
        {
            "name": String("RemovingSingleTrait"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingSingleTrait"),
            ]),
            "span_begin_line": Uint64(5),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("SuperTrait"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovingOneTraitOfMultiple"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingOneTraitOfMultiple"),
            ]),
            "span_begin_line": Uint64(6),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("SuperTrait2"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovingOneWithGenerics"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingOneWithGenerics"),
            ]),
            "span_begin_line": Uint64(7),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("SuperTrait2"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovingOneWithGenericsOnTheSuperTrait"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingOneWithGenericsOnTheSuperTrait"),
            ]),
            "span_begin_line": Uint64(8),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("GenericSuperTrait"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovingTraitAndLifetime"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingTraitAndLifetime"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("SuperTrait2"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovingMultiple"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingMultiple"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("SuperTrait"),
            ]),
            "visibility_limit": String("public"),
        },
        {
            "name": String("RemovingMultiple"),
            "path": List([
                String("trait_removed_supertrait"),
                String("RemovingMultiple"),
            ]),
            "span_begin_line": Uint64(10),
            "span_filename": String("src/lib.rs"),
            "trait_path": List([
                String("trait_removed_supertrait"),
                String("SuperTrait2"),
            ]),
            "visibility_limit": String("public"),
        },
    ],
}
