src/snapshots/cargo_semver_checks__query__tests__trait_unsafe_added.snap
---
source: src/query.rs
expression: output_snap
---
{
    "./test_crates/trait_method_unsafe_added/": [
        {
            "name": String("TraitBecomesUnsafe"),
            "path": List([
                String("trait_method_unsafe_added"),
                String("TraitBecomesUnsafe"),
            ]),
            "span_begin_line": Uint64(23),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_missing/": [
        {
            "name": String("TraitBecomesUnsafe"),
            "path": List([
                String("trait_missing"),
                String("TraitBecomesUnsafe"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_missing_with_major_bump/": [
        {
            "name": String("TraitBecomesUnsafe"),
            "path": List([
                String("trait_missing_with_major_bump"),
                String("TraitBecomesUnsafe"),
            ]),
            "span_begin_line": Uint64(9),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
    "./test_crates/trait_unsafe_added/": [
        {
            "name": String("TraitBecomesUnsafe"),
            "path": List([
                String("trait_unsafe_added"),
                String("TraitBecomesUnsafe"),
            ]),
            "span_begin_line": Uint64(2),
            "span_filename": String("src/lib.rs"),
            "visibility_limit": String("public"),
        },
    ],
}
